Release v0.0.1-alpha
Updated for separate JavaFX 11, added run_javafx.cmd, improved README.md